# python-dojo

./: LICENSE  Makefile  README.md  pyproject.toml
dojo/: hello.py
tests/: test_hello.py
