[tool.poetry]
name = "dojo"
version = "0.1.0"
description = "Simple Python base project for you to fork ;)"
authors = ["Jorge Ramirez"]
readme = "README.md"
include = ["dojo"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pytest-cov = "^5.0.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
pytest = "^8.2.1"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = [
    ".venv",
    "__pycache__"
]
max-line-length = 120

[tool.black]
line-length=120

[tool.isort]
profile = "black"